overflow fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -63,6 +63,7 @@ a {
 
 .hero {
   height: 100%;
+  overflow: hidden;
 }
 
 .hero .large-container {
